# deepagents-with-telegram

./: .gitignore  README.md
.github/: pr-file-labeler.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: _lint.yml  _test.yml  ci.yml  pr_labeler_title.yml  release.yml
docs/: QUICKSTART.md  deepagents-cli-architecture-analysis.md
examples/content-builder-agent/: AGENTS.md
libs/acp/: Makefile  README.md  pyproject.toml
libs/acp/deepagents_acp/: server.py
libs/acp/tests/: chat_model.py  test_server.py
libs/deepagents/: Makefile  README.md  pyproject.toml
libs/deepagents-cli/: README.md  pyproject.toml
libs/deepagents-cli/deepagents_cli/: _version.py  agent.py  app.py  app.tcss  clipboard.py  config.py  default_agent_prompt.md  file_ops.py  image_utils.py  input.py  local_context.py  main.py  sessions.py  textual_adapter.py  ui.py
libs/deepagents-cli/deepagents_cli/skills/: __init__.py  commands.py  load.py
libs/deepagents-cli/deepagents_cli/widgets/: __init__.py  approval.py  autocomplete.py  chat_input.py  diff.py  history.py  loading.py  messages.py  status.py  tool_renderers.py  tool_widgets.py  welcome.py
libs/deepagents-cli/examples/skills/skill-creator/: SKILL.md
libs/deepagents-cli/examples/skills/skill-creator/scripts/: init_skill.py  quick_validate.py
libs/deepagents-cli/tests/integration_tests/: conftest.py  test_sandbox_factory.py  test_sandbox_operations.py
libs/deepagents-cli/tests/unit_tests/: test_agent.py  test_autocomplete.py  test_config.py  test_end_to_end.py  test_image_utils.py  test_imports.py  test_local_context.py  test_messages.py  test_sessions.py  test_version.py
libs/deepagents-cli/tests/unit_tests/skills/: test_commands.py  test_load.py
libs/deepagents-telegram/: .env.example  README.md  pyproject.toml
libs/deepagents-telegram/deepagents_telegram/: __init__.py  adapter.py  formatters.py  main.py  session.py
libs/deepagents-telegram/deepagents_telegram/handlers/: __init__.py  callbacks.py  commands.py  messages.py
libs/deepagents/deepagents/: __init__.py  graph.py
libs/deepagents/deepagents/backends/: composite.py  state.py  utils.py
libs/deepagents/deepagents/middleware/: __init__.py  filesystem.py  memory.py  skills.py  subagents.py
libs/deepagents/tests/: utils.py
libs/deepagents/tests/integration_tests/: test_deepagents.py  test_filesystem_middleware.py  test_hitl.py  test_subagent_middleware.py
libs/deepagents/tests/unit_tests/: chat_model.py  test_middleware.py  test_middleware_async.py  test_subagents.py  test_todo_middleware.py
libs/deepagents/tests/unit_tests/backends/: test_filesystem_backend.py  test_filesystem_backend_async.py  test_state_backend.py  test_state_backend_async.py  test_store_backend.py  test_store_backend_async.py
libs/deepagents/tests/unit_tests/middleware/: test_memory_middleware.py  test_memory_middleware_async.py  test_skills_middleware.py  test_skills_middleware_async.py  test_validate_path.py
libs/harbor/: Makefile  README.md  pyproject.toml
libs/harbor/deepagents_harbor/: __init__.py  backend.py  deepagents_wrapper.py  tracing.py
libs/harbor/scripts/: analyze.py  harbor_langsmith.py
