[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepagents-acp"
version = "0.0.1"
description = "Agent Client Protocol integration for DeepAgents"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
]
maintainers = [
]
keywords = ["agent", "acp", "agent-client-protocol", "deepagents", "ai-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "agent-client-protocol>=0.6.2",
    "deepagents",
    "deepagents-cli",
]

[dependency-groups]
dev = [
    "batrachian-toad>=0.5.2",
]
test = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-socket>=0.7.0",
    "pytest-timeout>=2.3.1",
    "ruff>=0.9.7",
    "dirty-equals>=0.11",
]



[project.urls]
Homepage = "https://github.com/langchain-ai/deepagents"
Repository = "https://github.com/langchain-ai/deepagents"
Issues = "https://github.com/langchain-ai/deepagents/issues"

[project.scripts]
deepacp = "deepagents_acp.server:cli_main"


[tool.pytest.ini_options]
asyncio_mode = "auto" # or "strict"
